--- a/appManager/WebContent/WEB-INF/web.xml
+++ b/appManager/WebContent/WEB-INF/web.xml
@@ -6,10 +6,15 @@
 	version="3.0">
 	
   <display-name>appManager</display-name>
+  
   <jsp-config>
         <jsp-property-group>
             <url-pattern>*.jsp</url-pattern>
             <include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
         </jsp-property-group>
    </jsp-config>
+   
+   <listener>
+   		<listener-class>config.InitialisationDaoFactory</listener-class>
+   </listener>
 </web-app>
